Polaroids with tilt

--- a/app/(pages)/_globals/styles/globals.scss
+++ b/app/(pages)/_globals/styles/globals.scss
@@ -8,6 +8,7 @@
   --background-dark-purple: #11043F;
   --background-white: #F9FBFC;
   --background-light-grey: #DCE3EA;
+  --polaroid-shadow: #A6BFC7;
 
   /* About Us Text Colors */
   --text-dark: #123041;
@@ -15,7 +16,7 @@
   --text-black: #000000
   --text-white: #FFFFFF;
 
-  /* About Us Cards */
+  /* About Us Cards */ 
   --card-light-blue: #9EE7E5;
   --card-light-green: #AFD157;
   --card-light-yellow: #FFC53D;
