Simplified tilt aspect

--- a/app/(pages)/_globals/styles/globals.scss
+++ b/app/(pages)/_globals/styles/globals.scss
@@ -9,6 +9,7 @@
   --background-white: #F9FBFC;
   --background-light-grey: #DCE3EA;
   --polaroid-shadow: #A6BFC7;
+  --polaroid-fill: #E5EEF1;
 
   /* About Us Text Colors */
   --text-dark: #123041;
