--- a/app/(pages)/_globals/styles/globals.scss
+++ b/app/(pages)/_globals/styles/globals.scss
@@ -1,4 +1,3 @@
-@tailwind base;
 @tailwind components;
 @tailwind utilities;
 
@@ -8,30 +7,35 @@
   font-weight: 200;
   font-style: normal;
 }
+
 @font-face {
   font-family: 'Metropolis';
   src: url('/fonts/Metropolis/TrueType/Metropolis-Light.ttf') format('truetype');
   font-weight: 300;
   font-style: normal;
 }
+
 @font-face {
   font-family: 'Metropolis';
   src: url('/fonts/Metropolis/TrueType/Metropolis-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
 }
+
 @font-face {
   font-family: 'Metropolis';
   src: url('/fonts/Metropolis/TrueType/Metropolis-Medium.ttf') format('truetype');
   font-weight: 500;
   font-style: normal;
 }
+
 @font-face {
   font-family: 'Metropolis';
   src: url('/fonts/Metropolis/TrueType/Metropolis-SemiBold.ttf') format('truetype');
   font-weight: 600;
   font-style: normal;
 }
+
 @font-face {
   font-family: 'Metropolis';
   src: url('/fonts/Metropolis/TrueType/Metropolis-Bold.ttf') format('truetype');
@@ -41,6 +45,7 @@
 
 :root {
   --font-metropolis: 'Metropolis', sans-serif;
+  --metropolis: 'Metropolis', sans-serif;
   /* About Us Colors */
   --background-medium-purple: #3E3A95;
   --background-dark-purple: #11043F;
@@ -85,6 +90,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: var(--font-metropolis);
 }
 
 h1 {
