SVGs uploaded, globals updated

--- a/app/(pages)/_globals/styles/globals.scss
+++ b/app/(pages)/_globals/styles/globals.scss
@@ -49,6 +49,7 @@
 
   /* About Us Text Colors */
   --text-dark: #123041;
+  --text-hero: #005271;
   --text-extra-dark: #0E2535;
   --text-black: #000000
   --text-white: #FFFFFF;
