--- a/app/(pages)/_globals/styles/globals.scss
+++ b/app/(pages)/_globals/styles/globals.scss
@@ -58,7 +58,7 @@
   /* About Us Text Colors */
   --text-dark: #123041;
   --text-extra-dark: #0E2535;
-  --text-black: #000000
+  --text-black: #000000;
   --text-white: #FFFFFF;
   --text-purple: #BE5BA8;
 
