--- a/app/(pages)/_globals/styles/globals.scss
+++ b/app/(pages)/_globals/styles/globals.scss
@@ -62,6 +62,7 @@
   --text-black: #000000;
   --text-white: #FFFFFF;
   --text-purple: #BE5BA8;
+  --text-dark-blue: #005271;
 
   /* About Us Cards */ 
   --card-light-blue: #9EE7E5;
@@ -86,6 +87,17 @@
   --glass-saturation: 100%;
   --glass-reflex-dark: 1;
   --glass-reflex-light: 1;
+
+  --navbar-bg: #E5EEF180;
+}
+
+@keyframes cloud-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 * {
