--- a/app/(pages)/_globals/styles/globals.scss
+++ b/app/(pages)/_globals/styles/globals.scss
@@ -99,6 +99,15 @@
     transform: rotate(360deg);
   }
 }
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
 html {
   @apply scroll-smooth;
 }
